--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/dakotagrusak/resume-dg#readme",
   "dependencies": {
     "hackmyresume": "^1.9.0-beta",
+    "jsonresume-theme-elite": "^1.1.2",
     "wkhtmltopdf": "^0.3.4"
   }
 }
