--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - npm install -g npm@latest
 script:
   - npm run analyze
+  - npm run compile
 deploy:
   provider: script
   script: bash scripts/deploy.sh
